# miniai

./: 04_minibatch_training.html  04_minibatch_training.ipynb  04_minibatch_training.md  05_datasets.html  05_datasets.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: deploy.yaml  test.yaml
miniai/: _modidx.py  activations.py  conv.py  core.py  datasets.py  learner.py  training.py
nbs/: 00_core.ipynb  04_minibatch_training.ipynb  05_datasets.ipynb  07_convolutions.ipynb  09_learner.ipynb  10_activations.ipynb  index.ipynb  nbdev.yml
