[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "miniai"
dynamic = ["version"]
description = "personal repo for miniai"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "yowashi23", email = "shin.yongwhan23@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["torch", "matplotlib", "datasets"]

[project.urls]
Repository = "https://github.com/yowashi23/miniai"
Documentation = "https://yowashi23.github.io/miniai/"

[project.entry-points.nbdev]
miniai = "miniai._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "miniai.__version__"}

[tool.setuptools.packages.find]
include = ["miniai"]

[tool.nbdev]
